initial updates for auto folder sharing and related changes.  Pushed sharing code into InviteUserService and added test